--- a/package.json
+++ b/package.json
@@ -1,13 +1,100 @@
 {
-  "name": "@./source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {},
+  "name": "healthcare-workspace",
+  "version": "1.0.0",
+  "description": "Doctor Appointment Booking System",
   "private": true,
-  "dependencies": {},
+  "scripts": {
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx lint",
+    "serve:frontend": "nx serve doctor-appointment-system-fe",
+    "serve:backend": "nx serve doctor-appointment-system-bff",
+    "storybook": "nx storybook doctor-appointment-system-fe",
+    "dev": "concurrently \"nx serve doctor-appointment-system-bff\" \"nx serve doctor-appointment-system-fe\"",
+    "build:all": "nx run-many --target=build --all",
+    "format": "nx format:write",
+    "format:check": "nx format:check",
+    "workspace-lint": "nx workspace-lint"
+  },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/eslint": "18.0.0",
+    "@nx/eslint-plugin": "18.0.0",
+    "@nx/jest": "18.0.0",
     "@nx/js": "18.0.0",
+    "@nx/node": "18.0.0",
+    "@nx/react": "18.0.0",
+    "@nx/web": "18.0.0",
+    "@nx/webpack": "18.0.0",
     "@nx/workspace": "18.0.0",
-    "nx": "18.0.0"
+    "@nx/storybook": "18.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
+    "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@storybook/react": "8.6.9",
+    "@storybook/react-webpack5": "8.6.9",
+    "@storybook/test": "8.6.9",
+    "@storybook/test-runner": "0.22.0",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/addon-viewport": "8.6.9",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
+    "@storybook/addon-essentials": "8.6.9",
+    "@storybook/addon-interactions": "8.6.9",
+    "@testing-library/react": "14.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^20.11.5",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "babel-jest": "^29.4.1",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "msw-storybook-addon": "^1.10.0",
+    "nx": "18.0.0",
+    "prettier": "^3.2.4",
+    "react-refresh": "^0.10.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "^5.3.3",
+    "url-loader": "^4.1.1",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
+    "@mui/x-date-pickers": "^7.22.2",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
+    "axios": "^1.6.5",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
+    "express": "^4.18.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tslib": "^2.6.2",
+    "msw": "1.3.2",
+    "storybook": "8.6.9",
+    "uuid": "9.0.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
