--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "express": "^4.18.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "6.11.2",
     "tslib": "^2.6.2",
     "msw": "1.3.2",
     "storybook": "8.6.9",
